--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 5000
 ACCESS_TOKEN_KEY = pethome
 REFRESH_TOKEN_KEY = petservice
+ALLOWED_ORIGINS=http://localhost:3000, https://pet-home-orcin.vercel.app
