--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "multer-storage-cloudinary": "^4.0.0",
         "nodemailer": "^6.9.13",
         "nodemon": "^3.1.1",
-        "otp-generator": "^4.0.1"
+        "otp-generator": "^4.0.1",
+        "swagger-ui-express": "^5.0.1",
+        "yamljs": "^0.3.0"
     }
 }
